# UV_Sonar3D_ws

./: .gitignore  README.md
results/: 2024.05.27 11-01-34.pcd  2024.05.27 21-55-22.pcd  2024.05.30 18-30-56.pcd  2024.09.10 09-45-52.pcd  cylinder.pcd  pool1.pcd  pool_wall.pcd  shpool1.pcd  shpool2.pcd  shpool3.pcd  shpool4.pcd  shpool_bad.pcd  simu_bridge_3D1.pcd  simu_bridge_3D2.pcd  simu_bridge_3D3.pcd  sonar3D.pcd
src/cirs_girona_cala_viuda/: CMakeLists.txt  cirs_girona_cala_viuda.md  package.xml
src/cirs_girona_cala_viuda/launch/: cirs_girona_cala_viuda_static_tf.launch.py  cirs_msg_process.launch.py
src/cirs_girona_cala_viuda/msg/: LinkquestDvl.msg
src/cirs_girona_cala_viuda/src/: adis_imu_process.cpp  depth_process.cpp  dvl_process.cpp
src/m750d_3D/: CMakeLists.txt  package.xml
src/m750d_3D/src/: m750d_3D.cpp  pc_stitch.cpp
src/m750d_3d/: CMakeLists.txt  m750d_3d.md  package.xml
src/m750d_3d/include/m750d_3d/: image_fun.h
src/m750d_3d/src/: image_fun.cpp  m750d_3D.cpp  pc_stitch.cpp  simu_m750d_3D.cpp  vertical_scan_reconstruction.cpp  vertical_scan_reconstruction_with_imu.cpp  vertical_scan_save_data_csv.cpp
src/mbs/: CMakeLists.txt  package.xml
src/mbs/launch/: pointcloud2scan.launch.py
src/mbs/src/: m750d_image_to_pointcloud.cpp  m750d_ping_to_image.cpp  m750d_ping_to_pointcloud.cpp
src/oculus_interfaces/msg/: Ping.msg
src/oculus_ros2/: CMakeLists.txt
src/oculus_ros2/cfg/: default.yaml
src/threed_reconstruction/: CMakeLists.txt  package.xml
src/threed_reconstruction/src/: cave_recon.cpp  control_demo.cpp
src/uvbot_odometry/: CMakeLists.txt  package.xml  setup.cfg
src/uvbot_odometry/config/: odometry_ekf.yaml  odometry_zyj.yaml  sensor_config.yaml
src/uvbot_odometry/crc/: CRC8_CRC16.c
src/uvbot_odometry/device/altimeter/: altimeter.cpp  altimeter.hpp
src/uvbot_odometry/device/altimeter/isa500/: isa500.cpp  isa500.hpp
src/uvbot_odometry/device/depth/: depth.cpp  depth.hpp
src/uvbot_odometry/device/depth/keller/: keller.cpp  keller.hpp
src/uvbot_odometry/device/gps/: gps.cpp  gps.hpp
src/uvbot_odometry/device/gps/oemr980/: oemr980.cpp  oemr980.hpp
src/uvbot_odometry/device/imu/: imu.cpp  imu.hpp
src/uvbot_odometry/device/imu/100D4/: 100D4.cpp  100D4.hpp
src/uvbot_odometry/device/imu/bewis/: bewis.cpp  bewis.hpp
src/uvbot_odometry/device/imu/lpms/: lpms.cpp  lpms.hpp
src/uvbot_odometry/include/uvbot_odometry/: altimeter_node.hpp  common.hpp  depth_node.hpp  gps_node.hpp  imu_node.hpp
src/uvbot_odometry/launch/: uvbot_odometry.launch.py
src/uvbot_odometry/src/: odometry_node.cpp
src/uvbot_odometry/uvbot_odometry/: dvl_node.py  ugps_node.py
